--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ur5n0ijxpj1t8mWFBScutbUC1Cnu+BKvXtFwKMMVfts=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://gmvision.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=50482
 DB_DATABASE=gmvision
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgresql
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -47,3 +47,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYSTACK_PUBLIC_KEY=pk_test_20ed895003a48fa348671c18b31be463e36be735
+PAYSTACK_SECRET_KEY=sk_test_ab6dd4f71bbedb73660bd3538f760ed207eb4efe
+PAYSTACK_PAYMENT_URL=https://api.paystack.co
+MERCHANT_EMAIL=majorcaios@gmail.com
