--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,25 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Ur5n0ijxpj1t8mWFBScutbUC1Cnu+BKvXtFwKMMVfts=
+APP_KEY=base64:EucYShnbwIrqKBy3d9RksOCnUvtAF547pvfZ73xRZLQ=
 APP_DEBUG=true
 APP_URL=http://gmvision.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=50482
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=gmvision
-DB_USERNAME=postgresql
-DB_PASSWORD=root
+DB_USERNAME=root
+DB_PASSWORD=
+
+#DB_CONNECTION=mysql
+#DB_HOST=localhost
+#DB_PORT=3306
+#DB_DATABASE=goldekjy_gmvision
+#DB_USERNAME=goldekjy_goldenmothers
+#DB_PASSWORD=Major@21215154
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
