--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
         "unicodeveloper/laravel-paystack": "^1.0",
+        "cohensive/embed": "5.5.*",
       "ext-json": "*"
     },
     "require-dev": {
