event component and dashboard component created

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vform": "^2.0.4",
         "vue-stack-grid": "^1.2.2",
         "vuetify": "^2.4.5"
     }
