--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
+        "cohensive/embed": "5.5.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,8 +18,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
         "unicodeveloper/laravel-paystack": "^1.0",
-        "cohensive/embed": "5.5.*",
-      "ext-json": "*"
+        "webpatser/laravel-uuid": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
