--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@mdi/font": "^6.1.95",
         "chart.js": "2",
+        "material-design-icons": "^3.0.1",
+        "material-design-icons-iconfont": "^6.1.0",
+        "moment": "^2.29.4",
         "vform": "^2.0.4",
         "vue-chartkick": "0.6.1",
         "vue-stack-grid": "^1.2.2",
+        "vuex": "^3.5.1",
+        "vuex-persistedstate": "^3.0.1",
         "vuetify": "^2.4.5"
     }
 }
