cv and transcript upload done

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=aad8e6165a2de2997d53",
-    "/css/app.css": "/css/app.css?id=53fb5815f1cfe6dc617b"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
