--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=29e1ad8dd1331820a139",
+    "/css/app.css": "/css/app.css?id=69f31d2d0f6faafcbb39"
 }
